<resources>
    <string name="app_name">DailyHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">DailyHelper</string>
    <string name="create_account">
        <u>Create an account</u>
    </string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in">Sign In</string>
    <string name="enter">Enter</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_user_or_password">Invalid user or password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="keep_logged_in">Keep Logged In</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="work">Work</string>
    <string name="log_work">Log Work</string>
    <string name="history">History</string>
    <string name="salary">Salary:</string>
    <string name="no_work_log_found">No work log found.</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="edit_work_log">Edit Work Log</string>
    <string name="in">In:</string>
    <string name="out">Out:</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="action_sort_by_the_newest">Sort by the newest</string>
    <string name="action_sort_by_the_oldest">Sort by the oldest</string>
    <string name="total">Total:</string>
</resources>
