<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        tools:context=".acitivities.CreateAccountActivity"
        android:scrollbars="none">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:padding="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/TextInputLayout"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_name"
                    style="@style/TextInputEditText"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_username"
                style="@style/TextInputLayout"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_username"
                    style="@style/TextInputEditText"
                    android:hint="@string/username"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/TextInputLayout"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_password"
                    style="@style/TextInputEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                style="@style/TextInputLayout"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_email"
                    style="@style/TextInputEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_phone"
                style="@style/TextInputLayout"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_phone"
                    style="@style/TextInputEditText"
                    android:hint="@string/phone"
                    android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/tv_invalid_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_already_exists"
                android:textAlignment="center"
                android:visibility="invisible"
                android:textColor="@color/colorError">

        </TextView>

        <Button
                android:id="@+id/register"
                style="@style/Button"
                android:text="@string/enter"/>
    </LinearLayout>

</ScrollView>