<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp">

    <com.google.android.material.card.MaterialCardView
            style="@style/CardViewListLayout">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Month"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/RecyclerViewItemLayout"
                        android:text="@string/date"
                        android:textSize="18sp"/>

                <TextView
                        style="@style/RecyclerViewItemLayout"
                        android:text="@string/date"
                        android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/RecyclerViewItemLayout"
                        android:text="@string/total"
                        android:textSize="18sp"/>

                <TextView
                        style="@style/RecyclerViewItemLayout"
                        android:text="@string/total"
                        android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/RecyclerViewItemLayout"
                        android:text="@string/salary"
                        android:textSize="18sp"/>

                <TextView
                        style="@style/RecyclerViewItemLayout"
                        android:text="@string/salary"
                        android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>