<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
            style="@style/CardViewListLayout">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_date_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorPrimary"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textAlignment="center"
                        android:text="@string/morning"
                        android:textSize="20sp"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textAlignment="center"
                        android:text="@string/afternoon"
                        android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">

                <TextView
                        style="@style/RecyclerViewItemText"
                        android:layout_width="0dp"
                        android:id="@+id/tv_morning_history"
                        android:text="@string/morning"
                        android:layout_weight="5"/>

                <TextView
                        style="@style/RecyclerViewItemText"
                        android:layout_width="0dp"
                        android:id="@+id/tv_afternoon_history"
                        android:text="@string/afternoon"
                        android:layout_weight="5"/>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>