<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:background="@color/colorPrimary">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_work_log"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorWhite"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:gravity="center">

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="9">
            <TextView
                    style="@style/TextViewDateChooser"
                    android:text="@string/date"/>

            <TextView
                    android:id="@+id/tv_edit_date"
                    style="@style/TextViewDateChooser"
                    android:text="@string/date"
            />
        </LinearLayout>

        <ImageButton
                android:id="@+id/ib_choose_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:layout_weight="1"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorWhite"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                style="@style/TextViewDateChooser"
                android:text="Morning: "
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:gravity="center">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="9">
                <TextView
                        style="@style/TextViewDateChooser"
                        android:text="@string/in"/>

                <TextView
                        android:id="@+id/tv_edit_morning_in"
                        style="@style/TextViewDateChooser"
                        android:text="@string/time"
                />
            </LinearLayout>

            <ImageButton
                    android:id="@+id/ib_choose_edit_morning_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:gravity="center">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="9">
                <TextView
                        style="@style/TextViewDateChooser"
                        android:text="@string/out"/>

                <TextView
                        android:id="@+id/tv_edit_morning_out"
                        style="@style/TextViewDateChooser"
                        android:text="@string/time"
                />
            </LinearLayout>

            <ImageButton
                    android:id="@+id/ib_choose_edit_morning_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorWhite"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                style="@style/TextViewDateChooser"
                android:text="Afternoon: "
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:gravity="center">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="9">
                <TextView
                        style="@style/TextViewDateChooser"
                        android:text="@string/in"/>

                <TextView
                        android:id="@+id/tv_edit_afternoon_in"
                        style="@style/TextViewDateChooser"
                        android:text="@string/time"
                />
            </LinearLayout>

            <ImageButton
                    android:id="@+id/ib_choose_edit_afternoon_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:gravity="center">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="9">
                <TextView
                        style="@style/TextViewDateChooser"
                        android:text="@string/out"/>

                <TextView
                        android:id="@+id/tv_edit_afternoon_out"
                        style="@style/TextViewDateChooser"
                        android:text="@string/time"
                />
            </LinearLayout>

            <ImageButton
                    android:id="@+id/ib_choose_edit_afternoon_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>